--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,1 +1,30 @@
-<p>login works!</p>
+<form [formGroup]="loginForm" (submit)="onFormSubmit()">
+  <mat-card>
+    <mat-card-header>
+      <h1>User Login</h1>
+    </mat-card-header>
+    <mat-card-content>
+      <!-- UserName -->
+      <mat-form-field class="mat-50">
+        <mat-label>Username</mat-label>
+        <input type="text" placeholder="username" formControlName="username" matInput>
+      </mat-form-field>
+
+      <!-- Password -->
+      <mat-form-field class="mat-50">
+        <mat-label>Password</mat-label>
+        <input type="password" placeholder="password" formControlName="password" matInput>
+      </mat-form-field>
+    </mat-card-content>
+
+    <mat-card-actions>
+      <div class="div-50">
+        <button type="submit" mat-raised-button color="primary">Submit</button>
+      </div>
+      <div class="div-50">
+        <button type="button" (click)="resetLoginForm()" mat-raised-button color="accent">Cancel</button>
+      </div>
+    </mat-card-actions>
+    <a routerLink="/register" mat-button color="primary">New User?</a>
+  </mat-card>
+</form>
