--- a/src/app/component/menubar/menubar.component.html
+++ b/src/app/component/menubar/menubar.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="isMenuVisible">
+<div>
     <mat-toolbar color="primary" class="mat-elevation-z8">
         <button (click)="drawer.toggle()" mat-icon-button>
             <mat-icon>menu</mat-icon>
@@ -31,9 +31,4 @@
             </div>
         </mat-drawer-content>
     </mat-drawer-container>
-</div>
-
-
-<div style="text-align: center; min-height: 600px;" *ngIf="!isMenuVisible">
-    <router-outlet></router-outlet>
 </div>
