--- a/src/app/component/menubar/menubar.component.html
+++ b/src/app/component/menubar/menubar.component.html
@@ -1,34 +1,38 @@
-<div>
+<div *ngIf="isMenuVisible">
     <mat-toolbar color="primary" class="mat-elevation-z8">
-        <button (click)="drawer.toggle()" mat-icon-button>
+        <button type="button" (click)="drawer.toggle()" mat-icon-button>
             <mat-icon>menu</mat-icon>
         </button>
         <span>Angular Authentication - NGRX</span>
         <span class="example-spacer"></span>
-        <button mat-button routerLink="/login">Logout</button>
+        <button type="button" mat-button routerLink="/login">Logout</button>
     </mat-toolbar>
 
     <mat-drawer-container autosize>
         <mat-drawer #drawer opened="true" position="start" mode="side">
             <mat-nav-list>
                 <mat-list-item>
-                    <button routerLink="" mat-button>
+                    <a routerLink="" mat-button>
                         <mat-icon>home</mat-icon>
                         Home
-                    </button>
+                    </a>
                 </mat-list-item>
                 <mat-list-item>
-                    <button routerLink="users" mat-button>
+                    <a routerLink="users" mat-button>
                         <mat-icon>verified_user</mat-icon>
                         Users
-                    </button>
+                    </a>
                 </mat-list-item>
             </mat-nav-list>
         </mat-drawer>
         <mat-drawer-content>
-            <div style="text-align: center; min-height: 600px;">
+            <div class="drawer-content">
                 <router-outlet></router-outlet>
             </div>
         </mat-drawer-content>
     </mat-drawer-container>
+</div>
+
+<div class="drawer-content" *ngIf="!isMenuVisible">
+    <router-outlet></router-outlet>
 </div>
