--- a/src/app/component/menubar/menubar.component.html
+++ b/src/app/component/menubar/menubar.component.html
@@ -17,10 +17,10 @@
                         Home
                     </a>
                 </mat-list-item>
-                <mat-list-item>
-                    <a routerLink="users" mat-button>
+                <mat-list-item  *ngFor="let item of menuList">
+                    <a routerLink="{{item.menu}}" mat-button>
                         <mat-icon>verified_user</mat-icon>
-                        Users
+                        {{ item.menu | titlecase }}
                     </a>
                 </mat-list-item>
             </mat-nav-list>
